# Incodedex

./: README.md  log.txt
.github/workflows/: build-msi.yml
graphindex/: .gitignore  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
graphindex/frontend/: index.html  package-lock.json  package.json  vite.config.js
graphindex/frontend/src/: App.jsx  colors.js  main.jsx  monaco-setup.js  styles.css
graphindex/frontend/src/api/: client.js
graphindex/frontend/src/components/: AskPanel.jsx  ExtendedAskPanel.jsx  GraphView.jsx  NodeInspector.jsx  SearchBar.jsx  Sidebar.jsx  SourceViewer.jsx
graphindex/frontend/src/hooks/: useGraphStream.js
graphindex/graphindex/: __init__.py  cli.py  config.py
graphindex/graphindex/analysis/: __init__.py  deadcode.py  dependencies.py  duplicates.py  health.py  languages.py
graphindex/graphindex/api/: __init__.py  mcp_server.py  routes.py  server.py  state.py
graphindex/graphindex/chunking/: __init__.py  chunker.py
graphindex/graphindex/embedding/: __init__.py  base.py  fallback.py  hf_inference.py  qwen_llamacpp.py
graphindex/graphindex/engine/: __init__.py  bootstrap.py  hf_client.py  llama_engine.py  registry.py  server_mode.py
graphindex/graphindex/frontend_dist/: index.html
graphindex/graphindex/frontend_dist/assets/: css.worker-CS4PmQaE.js  cssMode-BZQs80OV.js  editor.worker-Do-pUK2A.js  freemarker2-7plaPYGP.js  handlebars-BmJk0VQk.js  html-DJmHdAH-.js  html.worker-C3L3_Hz5.js  htmlMode-Dywivbnq.js  index-CcN_4unf.css  index-u4MQ5Jyk.js  javascript-D8cVNHAG.js  json.worker-DdIbjNR2.js  jsonMode-CcpbbLrs.js  liquid-C28lsvH5.js  mdx-tZmdK0NC.js  python-XMPjPQcd.js  razor-DST1N9sc.js  tsMode-D4zQXCqe.js  typescript-HE8fVn_y.js  xml-BF57RWOE.js  yaml-Cfgc5Fk4.js
graphindex/graphindex/graph/: __init__.py  builder.py  model.py  resolver.py
graphindex/graphindex/parsing/: __init__.py  ast_parser.py  grammars.py  symbols.py
graphindex/graphindex/pipeline/: __init__.py  events.py  orchestrator.py
graphindex/graphindex/qa/: __init__.py  asker.py  llm.py  orchestrator.py  tools.py
graphindex/graphindex/scanner/: __init__.py  ignore.py  walker.py
graphindex/graphindex/search/: __init__.py  engine.py  query.py
graphindex/graphindex/storage/: __init__.py  compsrc.py  db.py  schema.sql  vectors.py
graphindex/graphindex/summarize/: __init__.py  base.py  fallback.py  hf_inference.py  lfm_llamacpp.py
graphindex/graphindex/watcher/: __init__.py  incremental.py
graphindex/installer/: README.md  __init__.py  build_graphindex_wheel.py  build_msi.py  download_python.py  graphindex.wxs  stage.py
graphindex/tests/: conftest.py  test_analysis.py  test_api.py  test_extended_ask.py  test_graph_resolver.py  test_ignore.py  test_new_languages.py  test_parsing.py  test_pipeline_events.py  test_qa.py  test_review_fixes.py  test_search.py
graphindex/tests/fixtures/sample_repo/: .graphignore  app.js
graphindex/tests/fixtures/sample_repo/pkg/: models.py  service.py
