[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphindex"
version = "0.1.0"
description = "High-speed local-model codebase indexer with a live-updating knowledge graph"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "graphindex" }]
dependencies = [
    "pathspec>=0.12",
    "rapidfuzz>=3.6",
    "numpy>=1.24",
    "tree-sitter>=0.21",
    "tree-sitter-language-pack>=0.2",
    "flask>=3.0",
    "flask-cors>=4.0",
    "flask-socketio>=5.3",
    "simple-websocket>=1.0",
    "watchdog>=4.0",
    "click>=8.1",
    "huggingface-hub>=0.23",
    "rich>=13.0",
]

[project.optional-dependencies]
llama = ["llama-cpp-python>=0.2.70"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
graphindex = "graphindex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["graphindex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
