[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphindex"
version = "0.1.0"
description = "High-speed local-model codebase indexer with a live-updating knowledge graph"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "graphindex" }]
dependencies = [
    "pathspec>=0.12",
    "rapidfuzz>=3.6",
    "numpy>=1.24",
    "tree-sitter>=0.25",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-php>=0.23",
    "tree-sitter-zig>=0.23",
    "tree-sitter-kotlin>=0.23",
    "tree-sitter-bash>=0.23",
    "tree-sitter-lua>=0.5.0",
    "tree-sitter-sql>=0.3.11",
    "flask>=3.0",
    "flask-cors>=4.0",
    "flask-socketio>=5.3",
    "simple-websocket>=1.0",
    "watchdog>=4.0",
    "click>=8.1",
    "huggingface-hub>=0.23",
    "rich>=13.0",
]

[project.optional-dependencies]
llama = ["llama-cpp-python>=0.2.70"]
mcp = ["mcp>=1.0"]
dart = ["tree-sitter-dart>=0.23"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
graphindex = "graphindex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["graphindex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
