[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphindex"
version = "0.1.0"
description = "High-speed local-model codebase indexer with a live-updating knowledge graph"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "graphindex" }]
dependencies = [
    "pathspec>=0.12",
    "rapidfuzz>=3.6",
    "numpy>=1.24",
    "tree-sitter>=0.25",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-php>=0.23",
    "tree-sitter-zig>=0.23",
    "tree-sitter-kotlin>=0.23",
    "tree-sitter-bash>=0.23",
    "tree-sitter-lua>=0.5.0",
    "tree-sitter-sql>=0.3.11",
    "flask>=3.0",
    "flask-cors>=4.0",
    "flask-socketio>=5.3",
    "simple-websocket>=1.0",
    "watchdog>=4.0",
    "click>=8.1",
    "huggingface-hub>=0.23",
    "rich>=13.0",
]

[project.optional-dependencies]
# Real local models via embedded llama.cpp. `graphindex setup` then downloads
# the GGUF weights on first use. The prebuilt CPU wheel avoids needing a
# C++ toolchain on Windows/Linux/macOS — if your platform is covered, use
#   pip install --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cpu graphindex[llama]
# On PyPI the package is a source distribution that needs a compiler, so
# prefer the command above unless you are building from source intentionally.
llama = ["llama-cpp-python>=0.3"]
# Fast vector index (falls back to a pure-NumPy index if absent).
faiss = ["faiss-cpu>=1.8"]
# Expose graphindex search/graph over the Model Context Protocol.
mcp = ["mcp>=1.0"]
# tree-sitter grammar for Dart files (off by default to keep the base install
# small; enable with `pip install graphindex[dart]`).
dart = ["tree-sitter-dart>=0.23"]
# Convenience meta-extra: everything that has wheels for the current platform.
all = ["graphindex[llama,faiss,mcp]"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
graphindex = "graphindex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["graphindex*"]

[tool.setuptools.package-data]
# Non-Python files that must ship inside the wheel so installed users
# can run the package without a source checkout.
"graphindex.storage" = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
